Archive2/af/98808784c94d98/output
main.cpp:4:11: error: invalid use of template-name 'A' without an argument list
     const A a = A<int, int>{};
           ^
main.cpp:4:30: warning: extra ';' [-Wpedantic]
     const A a = A<int, int>{};
                              ^
